[gd_scene load_steps=5 format=3 uid="uid://dbdgpa4pfgryb"]

[ext_resource type="Texture2D" uid="uid://cd8341rl44tws" path="res://assets/used_assets/textures/powerplants/bb_normal.png" id="1_mtdfr"]
[ext_resource type="BitMap" uid="uid://1iqu0g7vgbmb" path="res://assets/used_assets/textures/powerplants/bb_click_mask.png" id="2_v7c1n"]
[ext_resource type="Script" path="res://src/gdscript/powerplants/pp_map_emplacement/bb_normal/texture_button.gd" id="3_5prkk"]
[ext_resource type="Texture2D" uid="uid://d1nj3wl5q4pnv" path="res://assets/UI Elements/All-HQ-Assets-D_0004s_0017_Icon-Hammer.png" id="3_8j8b0"]

[node name="BbNormal" type="TextureButton" groups=["BB"]]
offset_right = 591.0
offset_bottom = 365.0
pivot_offset = Vector2(288, 161)
texture_normal = ExtResource("1_mtdfr")
texture_click_mask = ExtResource("2_v7c1n")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_5prkk")

[node name="Hammer" type="Sprite2D" parent="."]
position = Vector2(260, 182)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_8j8b0")
offset = Vector2(18, -15)

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
